--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     body {
       margin: 0;
       overflow: hidden;
+      background-color: rgb(20, 32, 53);
+    }
+    canvas {
+      height: 100vh;
+      width: 100vw;
     }
   </style>
 </head>
