--- a/src/particles1/index.html
+++ b/src/particles1/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+  <title>Particles 1</title>
   <style>
     body {
       margin: 0;
@@ -20,7 +20,7 @@
 
 <body>
   <canvas></canvas>
-  <script type="module" src="/src/particles1/main.ts"></script>
+  <script type="module" src="/particles1/main.ts"></script>
 </body>
 
 </html>
