--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
-    <a href="particles1/">Particles 1</a>
+    <ul>
+        <li><a href="particles1/">Particles 1</a></li>
+        <li><a href="particles2/">Particles 2</a></li>
+    </ul>
 </body>
 </html>
